[tool.poetry]
name = "face-tune"
version = "0.1.0"
description = "Align face movements to music"
authors = ["Sharath <a1768686@student.adelaide.edu.au>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
insightface = "^0.7.3"
onnxruntime = "1.20.0"
scipy = "^1.15.1"
pedalboard = "^0.9.16"
sounddevice = "^0.5.1"
ffmpeg-python = "^0.2.0"
soundfile = "^0.13.1"
matplotlib = "^3.10.3"
gradio = "^5.34.2"

[tool.poetry.group.dev.dependencies]
mdformat = "^0.7.19"
ruff = "^0.9.3"
mypy = "^1.11.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
